# studious-adventure

./: .clang-format  CMakeLists.txt  Makefile  README.md  linker.ld  riscv-toolchain.cmake
include/grouperlib/: assert.h  bitmacros.h  error.h  fmtprint.h  numeric_types.h  option.h  slab.h
include/grouperlib/arch/: riscv.h
include/grouperlib/libc/: string.h
include/kernel/: paging.h  pmm.h  stringlib.h  types.h  uart_ns16550a.h
include/kzadhbat/: assert.h  bitmacros.h  fmtprint.h
include/kzadhbat/arch/: riscv.h
include/kzadhbat/collections/: bump.h  bump_allocator.h  slab.h
include/kzadhbat/libc/: string.h
include/kzadhbat/types/: error.h  numeric_types.h  option.h  result.h
include/minilibc/: freestanding.h  string.h
include/octiron/: device_tree.h  paging.h  pmm.h  trap.h  uart_ns16550a.h
include/octiron/collections/: array.h
include/octiron/devices/device_tree/: device_tree.h
include/octiron/devices/syscon/: reboot.h
kernel/: kernel.c  stringlib.c  uart_ns16550a.c
kernel/asm/: entry.S
scripts/: qemu.py
src/grouperlib/: error.c  fmtprint.c  slab.c
src/grouperlib/libc/: impl.c
src/kernel/: kernel.c  paging.c  pmm.c  uart_ns16550a.c
src/kernel/asm/: entry.S  globals.S  trap.S
src/kzadhbat/: error.c  fmtprint.c  slab.c
src/kzadhbat/ collections/: bump.c
src/kzadhbat/collections/: bump_allocator.c
src/kzadhbat/libc/: impl.c
src/octiron/: device_tree.c  entry.c  paging.c  pmm.c  trap.c  uart_ns16550a.c
src/octiron/asm/: entry.S  globals.S
src/octiron/devices/device_tree/: device_tree.c
src/octiron/devices/syscon/: reboot.c
